--- a/leaveManagement/src/main/resources/leaveManagement.properties
+++ b/leaveManagement/src/main/resources/leaveManagement.properties
@@ -11,3 +11,7 @@ spring.datasource.password=leavemanagement
 jms.broker-url=tcp://127.0.0.1:61616
 jms.user=admin
 jms.password=admin
+
+
+security.jwt.token.secret-key = secret-key
+security.jwt.token.expire-length = 300000
