--- a/leaveManagement/src/main/resources/leaveManagement.properties
+++ b/leaveManagement/src/main/resources/leaveManagement.properties
@@ -17,3 +17,6 @@ security.jwt.token.secret-key = salah
 security.jwt.token.expire-length = 300000
 
 security.jwt.token.certificat = C:\\local\\leavemanagement\\leavemanagement.p12
+
+
+server.port=8081
