--- a/leaveManagement/src/main/resources/leaveManagement_test.properties
+++ b/leaveManagement/src/main/resources/leaveManagement_test.properties
@@ -1,8 +1,9 @@
-leavemanagement.datasource.url=jdbc:mysql://127.0.0.1:3306/leavemanagement?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-leavemanagement.datasource.username=root
+leavemanagement.datasource.url=jdbc:h2:mem:leavemanagement;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+leavemanagement.datasource.username=test
 leavemanagement.datasource.password=test
 
-spring.profiles.active=prod
+spring.profiles.active=test
+
 
 spring.datasource.url=jdbc:h2:mem:springLeaveManagementDB
 spring.datasource.driverClassName=org.h2.Driver
