--- a/leaveManagement/src/main/resources/leaveManagement.properties
+++ b/leaveManagement/src/main/resources/leaveManagement.properties
@@ -1,6 +1,6 @@
 leavemanagement.datasource.url=jdbc:mysql://127.0.0.1:3306/leavemanagement?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 leavemanagement.datasource.username=root
-leavemanagement.datasource.password=test
+leavemanagement.datasource.password=Salah2802178
 
 spring.profiles.active=prod
 
