--- a/leaveManagement/src/test/resources/leaveManagement_test.properties
+++ b/leaveManagement/src/test/resources/leaveManagement_test.properties
@@ -10,15 +10,27 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=leavemanagement
 spring.datasource.password=leavemanagement
 
-jms.broker-url=tcp://127.0.0.1:61616
-jms.user=admin
+
+# Embedded ActiveMQ Configuration Example
+jms.broker-url=vm://embedded?broker.persistent=false,useShutdownHook=false
+jms.close-timeout=15000
+jms.in-memory=true
+jms.non-blocking-redelivery=false
 jms.password=admin
+jms.user=admin
+jms.send-timeout=0
+jms.pool.create-connection-on-startup=true
+jms.pool.enabled=false
+jms.pool.expiry-timeout=0
+jms.pool.idle-timeout=30000
+spring.activemq.pool.max-connections=1
+jms.pool.maximum-active-session-per-connection=500
+jms.pool.reconnect-on-exception=true
+jms.pool.time-between-expiration-check=-1
+
 
 
 security.jwt.token.secret-key = salah
 security.jwt.token.expire-length = 300000
 
 security.jwt.token.certificat = C:\\local\\leavemanagement\\leavemanagement.p12
-
-
-server.port=8081
